--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,17 +22,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_security_config">
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="w8LnzNAG9OIt3aWZPUmMdP5iO7Dn40Gu" />
-        <activity android:name=".WeatherActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".WeatherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity">
+
         </activity>
 
         <service android:name="com.baidu.location.f" android:enabled="true"
